--- a/webpage/html/output/videos.html
+++ b/webpage/html/output/videos.html
@@ -13,9 +13,11 @@
 
 </HEAD> 
 
-<BODY style="background-color:black;"> 
+<BODY class="w3-row" style="background-color:black;"> 
 
-<div id="bodyContent" class="w3-container w3-black w3-mobile w3-border-left w3-border-right" style="top:100px;width:1020px;margin:auto;">
+<div class="w3-col l2 m1 w3-center"><p></p></div>
+
+<div id="bodyContent" class="w3-container w3-black w3-border-left w3-border-right w3-col l8 m10" style="top:100px">
 
 	<div id="menu" class="w3-sidebar w3-bar-block w3-wide w3-large w3-padding-64 w3-black w3-border-right" style="display:none">
 		<button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
@@ -206,6 +208,8 @@ The following videos are a mix of Let's Play and development commentary. In it I
 		</div>	
 	</div>
 </div>
+
+<div class="w3-col l2 m1 w3-center"><p></p></div>
 
 <script>
 function w3_open() {
