added screenshots to the webpage

--- a/webpage/html/output/about.html
+++ b/webpage/html/output/about.html
@@ -72,20 +72,52 @@
 			</div>
 		</div>
 		<div class="w3-cell">
-			<p class="w3-xxlarge w3-wide w3-cell-middle">Support</p>
+			<p class="w3-xxlarge w3-wide w3-cell-middle">About Cosmodog</p>
 		</div>
 		<div id="text" class="w3-row w3-row-padding-32 w3-large w3-mobile">
-		<p>
+		
+<p>
+This game was designed and implemented by Anton Afanasjew, a german located developer. I'd greatly appreciate any feedback. Please let me know your opinion about the game at <a href="mailto:support@cosmodog.eu">support@cosmodog.eu</a>. 
+</p>
 
-Although the game has been tested extensively, chances are that you encounter a bug or a problem while playing it. In such a case, please let me know by sending an eMail at the address <a href="mailto:support@cosmodog.eu">support@cosmodog.eu</a>. Don't forget to mention the exact problem, the circumstances when it occurred and your machine and operating system. Ideally, provide a short description of how the problem can be reproduced.
+<p>
+The credit goes to the great frameworks, tools and libraries that were used in the development process of the game.
+</p>
 
-</p>	
+<p>
+<a href="https://www.oracle.com/java/index.html">Java platform</a>
+</p>
 
+<p>
+<a href="https://commons.apache.org/">Apache Commons framework</a>
+</p>
+
+<p>
+<a href="https://github.com/google/guava">Guava framework</a>
+</p>
+
+<p>
+<a href="http://slick.ninjacave.com/">Slick2D - 2D Java Game Library</a>
+</p>
+
+<p>
+<a href="http://www.mapeditor.org/">Tiled Map editor</a>
+</p>
 
 <p>
 
-Also make sure to visit the TranceScendent Games facebook, reddit and twitter accounts for news and discussions
+<a href="http://pyxeledit.com/">Pyxel Edit: pixel art and tileset creation tool</a>
+</p>
 
+<p>
+This game uses the music from <b>Exploration Game Music Pack</b> by <b>wowsoundsg</b> 
+and sound samples from <a href="http://www.Freesound.org">Freesound.org</a> 
+and <a href="http://www.superflashbros.net/as3sfxr/">http://www.superflashbros.net/as3sfxr/</a>.
+</p>
+
+<p>
+Additionally, it features graphics from the packs <b>Pak weapons</b>, <b>Premium Quality - Royalty Free Guns</b> 
+and <b>Game User Interface 3</b> as licensed from <a href="http://www.gamedevmarket.net">GameDev Market</a> 
 </p>
 		<p class="w3-center">
 		<a href="cosmodog.html">Back to the main page</a>
