--- a/webpage/html/output/screenshots.html
+++ b/webpage/html/output/screenshots.html
@@ -17,7 +17,7 @@
 
 <div class="w3-col l2 m1 w3-center"><p></p></div>
 
-<div id="bodyContent" class="w3-container w3-black w3-border-left w3-border-right w3-col l8 m10" style="top:100px">
+<div id="bodyContent" class="w3-container w3-black w3-border-left w3-border-right w3-border-top w3-border-bottom w3-col l8 m10 w3-margin-top w3-margin-bottom w3-padding-16" style="top:100px">
 
 	<div id="menu" class="w3-sidebar w3-bar-block w3-wide w3-large w3-padding-64 w3-black w3-border-right" style="display:none">
 		<button onclick="w3_close()" class="w3-bar-item w3-large">Close &times;</button>
@@ -85,19 +85,24 @@
 </div> 
 
 
-SCREENSHOTS
+<div id="screenshots" class="w3-row">
+	<img class="w3-half" src="pics/screenshot1.png" alt="Screenshot 1" height="auto" width="50%">
+	<img class="w3-half" src="pics/screenshot2.png" alt="Screenshot 2" height="auto" width="50%">
+	<img class="w3-half" src="pics/screenshot3.png" alt="Screenshot 3" height="auto" width="50%">
+	<img class="w3-half" src="pics/screenshot4.png" alt="Screenshot 4" height="auto" width="50%">
+	<img class="w3-half" src="pics/screenshot5.png" alt="Screenshot 5" height="auto" width="50%">
+	<img class="w3-half" src="pics/screenshot6.png" alt="Screenshot 6" height="auto" width="50%">
+	<img class="w3-half" src="pics/screenshot7.png" alt="Screenshot 7" height="auto" width="50%">
+	<img class="w3-half" src="pics/screenshot8.png" alt="Screenshot 8" height="auto" width="50%">
+	<img class="w3-half" src="pics/screenshot9.png" alt="Screenshot 9" height="auto" width="50%">
+	<img class="w3-half" src="pics/screenshot10.png" alt="Screenshot 10" height="auto" width="50%">
+</div>
 		<p class="w3-center">
 		<a href="cosmodog.html">Back to the main page</a>
 		<p>
 		</div>
-		<div id="footer" class="w3-container w3-opacity w3-padding-32 w3-center	w3-tiny">
-			<div id="footerAbout">
-			<span>About Trancescendent Games</span>
-			</div>
-			
-			<div id="footerContact">
-			<span>Contact</span>
-			</div>
+		<div id="footer" class="w3-container w3-opacity w3-row w3-center w3-small">
+			<a href="about.html">About Cosmodog</span>
 		</div>	
 	</div>
 </div>
