fixed screenshots for the webpage

--- a/webpage/html/output/download.html
+++ b/webpage/html/output/download.html
@@ -89,11 +89,11 @@ Cosmodog requires a Windows operating system. It was tested on Windows 7 and Win
 </p>
 
 <p>
-<a href="downloads/Cosmodog.zip" download="filename" class="w3-button w3-white w3-large w3-block w3-mobile">Cosmodog standalone</a>
+<a href="downloads/readme.txt" download="filename" class="w3-button w3-white w3-large w3-block w3-mobile">Cosmodog standalone</a>
 </p>
 
 <p>
-<a href="downloads/CosmodogInstaller.zip" download="filename" class="w3-button w3-white w3-large w3-block w3-mobile">Cosmodog installer</a>
+<a href="downloads/readme.txt" download="filename" class="w3-button w3-white w3-large w3-block w3-mobile">Cosmodog installer</a>
 </p>
 
 <p>
