Added gitignore, the new interface, the trike enemy

--- a/webpage/html/output/about.html
+++ b/webpage/html/output/about.html
@@ -81,6 +81,10 @@ This game was designed and implemented by Anton Afanasjew, a german located deve
 </p>
 
 <p>
+As a non-native English speaker, I am very interested in all mistakes in the game's texts. Send your remarks and I will incorporate them in the game.
+</p>
+
+<p>
 The credit goes to the great frameworks, tools and libraries that were used in the development process of the game.
 </p>
 
