Added the webpage deployment script

--- a/webpage/html/output/download.html
+++ b/webpage/html/output/download.html
@@ -25,6 +25,10 @@
 		<a href="cosmodog.html" class="w3-bar-item w3-button">Game</a>
 		</div>
 		
+		<div id="menuNews">
+		<a href="news.html" class="w3-bar-item w3-button">News</a>
+		</div>
+		
 		<div id="menuTheGame">
 		<a href="features.html" class="w3-bar-item w3-button">Features</a>
 		</div>
@@ -47,7 +51,7 @@
 		<a href="support.html" class="w3-bar-item w3-button">Support</a>
 		</div>
 		<div id="social" class="w3-container w3-opacity w3-padding-64 w3-tiny">
-			<a href="http://somegreatsite.com">Facebook</a> 
+			<a href="https://www.facebook.com/anton.afanasjew.18">Facebook</a> 
 			<br/>
 			<a href="http://somegreatsite.com">Twitter</a> 
 			<br/>
@@ -89,15 +93,7 @@ Cosmodog requires a Windows operating system. It was tested on Windows 7 and Win
 </p>
 
 <p>
-<a href="downloads/readme.txt" download="filename" class="w3-button w3-white w3-large w3-block w3-mobile">Cosmodog standalone</a>
-</p>
-
-<p>
-<a href="downloads/readme.txt" download="filename" class="w3-button w3-white w3-large w3-block w3-mobile">Cosmodog installer</a>
-</p>
-
-<p>
-Choose the standalone version if you have Java 7 JRE installed on your system. If you don't have Java 7 installed or are not sure about it, download the Cosmodog installer.
+<a href="downloads/cosmodog.zip" download="cosmodog.zip" class="w3-button w3-white w3-large w3-block w3-mobile">Cosmodog</a>
 </p>
 
 <p>
@@ -105,7 +101,7 @@ You can play the full game for free and distribute it in any non-commercial way.
 </p>
 
 <p>
-Please leave your comments, found bugs and extensions suggestions <a href="empty" download="filename">here</a>. If you are interested in the source code, you can find it in <a href="https://github.com/armitage81/cosmodog" download="filename">GitHub</a>
+Please leave your comments, found bugs and extensions suggestions <a href="mailto:feedback@cosmodog.eu">feedback@cosmodog.eu</a>. If you are interested in the source code, you can find it in <a href="https://github.com/armitage81/cosmodog" download="filename">GitHub</a>
 </p>
 
 
