--- a/webpage/html/output/news.html
+++ b/webpage/html/output/news.html
@@ -76,36 +76,16 @@
 			</div>
 		</div>
 		<div class="w3-cell">
-			<p class="w3-xxlarge w3-wide w3-cell-middle">Cosmodog - The game</p>
+			<p class="w3-xxlarge w3-wide w3-cell-middle">News</p>
 		</div>
 		<div id="text" class="w3-row w3-row-padding-32 w3-large w3-mobile">
 		<div>
 
-		<div class="w3-row w3-leftbar w3-light-grey w3-mobile w3-row-padding">
-			<p class="w3-xlarge w3-serif w3-mobile">
-				<i class="w3-mobile">
-				"At the beginning, there was nothing. It was not the Nothing in the meaning of an endless dark empty space. There was not even this. No space. No time. No mind to witness the surreality of a non-existent world. Pure Nothing in its quintessence."
-				</i>
-			</p>
-			<p>Mary Harper, Xenoarcheologist</p>
-		</div> 
+		<h3>September 29th 2017</h3>
+		<p>
+			Finally! After more than three years of development, Cosmodog is released! <a href="download.html">Download</a> the game for FREE! We'd greatly appreciate your feedback at <a href="mailto:feedback@cosmodog.eu">feedback@cosmodog.eu</a>.			
+		</p>
 
-		<p>
-			<i>Cosmodog</i> is a game about exploring an abandoned valley on <i>Phaeton</i>, an ancient planet with traces of alien civilization. A thriving colony of the past,
-			<i>Phaeton</i> was recently hit by multiple strikes of mysterious epidemies that caused dementia and mass suicides among the population.
-		</p>
-		<p>
-			You are a <i>cargo pilot</i> whose ship crashed on <i>Phaeton's</i> surface. Your task is to explore the forbidden valley and uncover the truth behind the mystery. The epic scale of the recent events has a personal meaning for you as a person you love is affected by them.
-		</p>
-		<p>
-			You will have to find weapons to fight your way through the hordes of <i>automatized drones</i>, <i>robots</i> and <i>native predators</i> in order to gather knowledge about the mysterious <i>monoliths</i> scattered around the valley.
-			<i>Thirst and hunger</i> will be your enemies. To survive, you will have to manage your <i>supplies</i>, beware the <i>radiation</i>, detect <i>land mines</i> and avoid <i>poisonous traps</i>.
-		</p>
-		<p>
-			Improve your survival chances by obtaining items, such as a <i>Geiger counter</i>, a <i>mine detector</i>, <i>explosives</i>, <i>vehicles</i> and <i>boats</i>. 
-			New areas will open for exploration with each gadget you find. 
-			Every revealed secret will bring you closer to the answer of what happened on the planet and to the person you love. 
-		</p>
 </div>
 		<p class="w3-center">
 		<a href="cosmodog.html">Back to the main page</a>
