--- a/webpage/html/output/about.html
+++ b/webpage/html/output/about.html
@@ -25,6 +25,10 @@
 		<a href="cosmodog.html" class="w3-bar-item w3-button">Game</a>
 		</div>
 		
+		<div id="menuNews">
+		<a href="news.html" class="w3-bar-item w3-button">News</a>
+		</div>
+		
 		<div id="menuTheGame">
 		<a href="features.html" class="w3-bar-item w3-button">Features</a>
 		</div>
@@ -47,7 +51,7 @@
 		<a href="support.html" class="w3-bar-item w3-button">Support</a>
 		</div>
 		<div id="social" class="w3-container w3-opacity w3-padding-64 w3-tiny">
-			<a href="http://somegreatsite.com">Facebook</a> 
+			<a href="https://www.facebook.com/anton.afanasjew.18">Facebook</a> 
 			<br/>
 			<a href="http://somegreatsite.com">Twitter</a> 
 			<br/>
@@ -77,7 +81,7 @@
 		<div id="text" class="w3-row w3-row-padding-32 w3-large w3-mobile">
 		
 <p>
-This game was designed and implemented by Anton Afanasjew, a german located developer. I'd greatly appreciate any feedback. Please let me know your opinion about the game at <a href="mailto:support@cosmodog.eu">support@cosmodog.eu</a>. 
+This game was designed and implemented by Anton Afanasjew, a german located developer. I'd greatly appreciate any feedback. Please let me know your opinion about the game at <a href="mailto:feedback@cosmodog.eu">feedback@cosmodog.eu</a>. 
 </p>
 
 <p>
