--- a/webpage/html/output/support.html
+++ b/webpage/html/output/support.html
@@ -25,6 +25,10 @@
 		<a href="cosmodog.html" class="w3-bar-item w3-button">Game</a>
 		</div>
 		
+		<div id="menuNews">
+		<a href="news.html" class="w3-bar-item w3-button">News</a>
+		</div>
+		
 		<div id="menuTheGame">
 		<a href="features.html" class="w3-bar-item w3-button">Features</a>
 		</div>
@@ -47,7 +51,7 @@
 		<a href="support.html" class="w3-bar-item w3-button">Support</a>
 		</div>
 		<div id="social" class="w3-container w3-opacity w3-padding-64 w3-tiny">
-			<a href="http://somegreatsite.com">Facebook</a> 
+			<a href="https://www.facebook.com/anton.afanasjew.18">Facebook</a> 
 			<br/>
 			<a href="http://somegreatsite.com">Twitter</a> 
 			<br/>
@@ -77,7 +81,7 @@
 		<div id="text" class="w3-row w3-row-padding-32 w3-large w3-mobile">
 		<p>
 
-Although the game has been tested extensively, chances are that you encounter a bug or a problem while playing it. In such a case, please let me know by sending an eMail at the address <a href="mailto:support@cosmodog.eu">support@cosmodog.eu</a>. Don't forget to mention the exact problem, the circumstances when it occurred and your machine and operating system. Ideally, provide a short description of how the problem can be reproduced.
+Although the game has been tested extensively, chances are that you encounter a bug or a problem while playing it. In such a case, please let me know by sending an eMail at the address <a href="mailto:feedback@cosmodog.eu">feedback@cosmodog.eu</a>. Don't forget to mention the exact problem, the circumstances when it occurred and your machine and operating system. Ideally, provide a short description of how the problem can be reproduced.
 
 </p>	
 
