--- a/webpage/html/output/videos.html
+++ b/webpage/html/output/videos.html
@@ -25,6 +25,10 @@
 		<a href="cosmodog.html" class="w3-bar-item w3-button">Game</a>
 		</div>
 		
+		<div id="menuNews">
+		<a href="news.html" class="w3-bar-item w3-button">News</a>
+		</div>
+		
 		<div id="menuTheGame">
 		<a href="features.html" class="w3-bar-item w3-button">Features</a>
 		</div>
@@ -47,7 +51,7 @@
 		<a href="support.html" class="w3-bar-item w3-button">Support</a>
 		</div>
 		<div id="social" class="w3-container w3-opacity w3-padding-64 w3-tiny">
-			<a href="http://somegreatsite.com">Facebook</a> 
+			<a href="https://www.facebook.com/anton.afanasjew.18">Facebook</a> 
 			<br/>
 			<a href="http://somegreatsite.com">Twitter</a> 
 			<br/>
