#235 - The word 'archaeology' is spelled consistently in the game's texts now.

--- a/webpage/html/output/cosmodog.html
+++ b/webpage/html/output/cosmodog.html
@@ -93,7 +93,7 @@
 				"At the beginning, there was nothing. It was not the Nothing in the meaning of an endless dark empty space. There was not even this. No space. No time. No mind to witness the surreality of a non-existent world. Pure Nothing in its quintessence."
 				</i>
 			</p>
-			<p>Mary Harper, Xenoarcheologist</p>
+			<p>Mary Harper, Xenoarchaeologist</p>
 		</div> 
 
 		<p>
