--- a/webpage/html/output/features.html
+++ b/webpage/html/output/features.html
@@ -91,7 +91,7 @@
 		"Forget physics. It's all about information. Information is the essence of the universe. In fact, it forms the line between reality and transcendence. Its exchange is the restriction that allows reality to exist in the boundless world of dreams."
 		</i>
 	</p>
-	<p>Mary Harper, Xenoarcheologist</p>
+	<p>Mary Harper, Xenoarchaeologist</p>
 </div> 
 
 <p>
