--- a/webpage/html/output/screenshots.html
+++ b/webpage/html/output/screenshots.html
@@ -91,7 +91,7 @@
 		"We tend to underestimate the mysterious complexity of the universe and reduce it to its huge scale. But the real mystery hides behind the veil that covers all visible things as huge as they might be. There are laws and powers holding together the fabric of space and time that can easily blast our limited imagination."
 		</i>
 	</p>
-	<p>Mary Harper, Xenoarcheologist</p>
+	<p>Mary Harper, Xenoarchaeologist</p>
 </div> 
 
 
