--- a/webpage/html/output/tipps.html
+++ b/webpage/html/output/tipps.html
@@ -91,7 +91,7 @@
 		"Physics has outlived itself as the language of reality. If we want to understand the universe as a whole, we need a new, more powerful language."
 		</i>
 	</p>
-	<p>Mary Harper, Xenoarcheologist</p>
+	<p>Mary Harper, Xenoarchaeologist</p>
 </div> 
 
 
