--- a/webpage/html/output/videos.html
+++ b/webpage/html/output/videos.html
@@ -92,7 +92,7 @@
 		"The only way to keep the definition of reality coherent is admitting its dependency on a concrete perception and hence its plurality."
 		</i>
 	</p>
-	<p>Mary Harper, Xenoarcheologist</p>
+	<p>Mary Harper, Xenoarchaeologist</p>
 </div> 
 
 <p>
